# sumario-sds

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sumario.csv
app/: database.py  import_data.py  main.py  models.py  schemas.py
app/routers/: activities.py  pages.py
frontend/static/: style.css
frontend/templates/: atividade.html  base.html  index.html
