[project]
name = "sumario"
version = "0.1.0"
description = "Add your description here"

requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
